--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "next": "^12.3.4",
+    "next": "13.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
