--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.3",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "next": "13.1",
+    "next": "^13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
